Created Database and User class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUp"></activity>
+        <activity android:name=".SignUp" />
+        <activity
+            android:name=".TopicSelection"
+            android:label="@string/title_activity_topic_selection"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Algebra1" />
+        <activity android:name=".Algebra2" />
+        <activity android:name=".Geometry" />
+        <activity android:name=".Calculus" />
+        <activity android:name=".Choice"></activity>
     </application>
 
 </manifest>
