--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".Algebra2" />
         <activity android:name=".Geometry" />
         <activity android:name=".Calculus" />
-        <activity android:name=".Choice"></activity>
+        <activity android:name=".Choice" />
+        <activity android:name=".LinearEquation"></activity>
     </application>
 
 </manifest>
