--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
     compile 'com.android.support:design:24.0.0-alpha2'
     compile 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.android.support:support-v4:23.3.0'
 }
