Main menu button on Compete view fixed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         applicationId "com.example.thait.mathetistics"
         minSdkVersion 14
         targetSdkVersion 23
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
     }
