--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
     <application
         android:name=".Application"
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,14 +30,15 @@
         <activity android:name=".Calculus" />
         <activity android:name=".Choice" />
         <activity android:name=".LinearEquation" />
-        <activity android:name=".PythagoreanTheorem" />
         <activity android:name=".Compete" />
         <activity android:name=".Rank" />
         <activity android:name=".Exercise" />
         <activity android:name=".Scored" />
         <activity android:name=".QRegistration" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".Username"></activity>
+        <activity android:name=".Username" />
+        <activity android:name=".Pt" />
+        <activity android:name=".Pt_ex"></activity>
     </application>
 
 </manifest>
