--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".Username" />
         <activity android:name=".Pt" />
-        <activity android:name=".Pt_ex"></activity>
+        <activity android:name=".Pt_ex" />
+        <activity android:name=".Directions"></activity>
     </application>
 
 </manifest>
